# nonebot-plugin-zzz-panel

./: LICENSE  README.md  pyproject.toml
nonebot_plugin_zzz_avatar_panel/: __init__.py  common.py  config.py  utils.py
nonebot_plugin_zzz_avatar_panel/data/common/: icon_info.json
nonebot_plugin_zzz_panel/: README.md  __init__.py  common.py  requirements.txt  user_operate.py  utils.py
nonebot_plugin_zzz_panel/data/common/: avatar_id_name.json
nonebot_plugin_zzz_panel/template/: avatar_panel.html
