[project]
name = "nonebot-plugin-zzz-avatar-panel"
version = "0.1.1"
description = "一个绝区零代理人面板查询的NoneBot2插件"
authors = [
    {name = "不成眠",email = "592910954@qq.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
